feat: Add Executor unit tests and fix compilation issues
TDD enforcement: RED → GREEN → REFACTOR cycle completed.

Changes:
- Add ExecutorSpec.scala with 26 unit tests for Executor logic
- Fix snake_case conversion for errorType method (REQ-ERR-03)
- Fix Java 25 compatibility issues in build.sbt
- Fix reserved keyword 'def' usage in ConfigLoader
- Fix Either import (use scala.util, not cats.data)
- Refactor for-comprehension in Main.scala for type safety
- Fix traverse implementation using foldRight pattern

Test results: 26 tests pass (8 CompilerSpec + 18 ExecutorSpec)

Implements: REQ-INT-01, REQ-TRV-01, REQ-TYP-03, REQ-ERR-01, REQ-ERR-03

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>